--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,7 @@
     width: 13em;
     background: #141;
 
-
+/* START_HIGHLIGHT */
     form, div {
       display: inline;
     }  
@@ -72,7 +72,7 @@
       }
     }
 
-
+/* END_HIGHLIGHT */
     ul {
       padding: 0;
 
