--- a/app/assets/stylesheets/carts.css.scss
+++ b/app/assets/stylesheets/carts.css.scss
@@ -2,8 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+/* START_HIGHLIGHT */
 .carts, #side #cart {
+/* END_HIGHLIGHT */
   .item_price, .total_line {
     text-align: right;
   }
