--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,36 +5,41 @@
   <title>Pragprog Books Online Store</title>
   <%= stylesheet_link_tag    "application", media: "all",
     "data-turbolinks-track" => true %>
-  
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 
 <body class="<%= controller.controller_name %>">
+
   <div id="banner">
+
+    <%= form_tag store_path, class: 'locale' do %>
+      <%= select_tag 'set_locale', 
+        options_for_select(LANGUAGES, I18n.locale.to_s),
+        onchange: 'this.form.submit()' %>
+      <%= submit_tag 'submit' %>
+      <%= javascript_tag "$('.locale input').hide()" %>
+    <% end %>
+
     <%= image_tag("logo.png") %>
-
     <%= @page_title || t('.title') %>
-
   </div>
+
   <div id="columns">
     <div id="side">
-     
+
       <% if @cart %>
         <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
           <%= render @cart %>
         <% end %>
       <% end %>
-    
+
+
       <ul>
-
         <li><a href="http://www...."><%= t('.home') %></a></li>
-
         <li><a href="http://www..../faq"><%= t('.questions') %></a></li>
-
         <li><a href="http://www..../news"><%= t('.news') %></a></li>
-
         <li><a href="http://www..../contact"><%= t('.contact') %></a></li>
-
       </ul>
 
       <% if session[:user_id] %>
